--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "regression":"npx playwright test",
-    "webTest":"npx playwright test --grep @web"
-
+    "regression": "npx playwright test",
+    "webTest": "npx playwright test --grep @web",
+    "CucumberRegression": "npx cucumber-js --tags '@Regression' --exit --format html:cucmber-report.html"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,11 @@
   "devDependencies": {
     "@playwright/test": "^1.51.0",
     "@types/node": "^22.10.2",
-    "allure-playwright": "^3.2.0"
+    "allure-playwright": "^3.2.0",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@cucumber/cucumber": "^11.2.0",
     "exceljs": "^4.4.0"
   },
   "directories": {
